#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-07
2014-08-06 Mikhail S. Dubrovin
- segment geometry is defined through the static factory method, add access to pixel areas
- add SegGeometry - interface, 
- add SegGeometryCspad2x1V1 - implementation for cspad2x1
- add SegGeometryStore - factory,  test/ex_seg_geometry_store.cpp
- remove PixCoords2x1V2
	
Tag: V00-02-06
2014-07-30 Mikhail S. Dubrovin
- move modules PixCoords2x1V2, GeometryAccess.h, GeometryObject.h, and test/ex_geometry_access from ImgAlgos to PSCalib

Tag: V00-02-05
2014-07-03 Mikhail S. Dubrovin
- in CalibParsStore.h, GenericCalibPars.h, GenericCalibPars.cpp - add calibration for variable size ndarrays 
	
Tag: V00-02-04
2014-06-26 Mikhail S. Dubrovin
- add CalibFileFinder.py - analogous to src/CalibFileFinder.cpp for pythonic-psana modules

Tag: V00-02-03
2014-05-28 Mikhail S. Dubrovin
- in CSPadCalibPars - use print_bits to control warning messages

Tag: V00-02-02
2014-05-24 Mikhail S. Dubrovin
- fix ex_princeton_calib_pars
	
Tag: V00-02-01
2014-05-23 Mikhail S. Dubrovin
- New generic algorithms for access to calibration parameters are implemented;
- remove PrincetonCalibPars
- add GenericCalibPars
- in CalibParsStore use GenericCalibPars for all implemented detectors;
	CsPad, CsPad2x2, Pnccd, Princeton, Andor, Opal1000, Opal4000
- To add new detector "Det":
	1) pdscalibdata/DetBaseV1.h
	2) in PSCalib/src/GenericCalibPars.cpp add
             #include "pdscalibdata/DetBaseV1.h"
             ...
	     template class PSCalib::GenericCalibPars<pdscalibdata::Opal4000BaseV1>;
	3) in PSCalib/include/CalibParsStore.h add
             #include "pdscalibdata/DetBaseV1.h"